# vvflow

./: .gitattributes  .gitignore  .vimrc  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CPackDeps.cmake  Dockerfile  Dockerfile.debian-jessie  Dockerfile.ubuntu-artful  Dockerfile.ubuntu-xenial  ExternalProjects.cmake  INSTALL.md  InverseMatrix.nb  LICENSE  Makefile  Pipfile  README.md  bitbucket-pipelines.yml  buildenv.sh  centos.sh  compose.lua  docker-compose.yml  documentation.odt  make.sh  testenv.sh  todo  vvhd.mk
.github/workflows/: build.yml
appimage/: AppRun  build.sh  vvflow.desktop
core/: .incversion  .version  documentation.odt  makefile
core/headers/: body.h  core.h  elementary.h  expfast.h  list.h  list_fixedsize.h  space.h  tree.h  tree_array.h
core/source/: body.cpp  expfast.cpp  list.cpp  list_fixedsize.cpp  space.cpp  tree.cpp  tree_array.cpp
doc/: documentation.odt  documentation.tex  makefile  manual.tex  vort_diff.zir  wall_diff.zir
doc/parts/: streamlines.tex
example/: Makefile  cyl_re600.lua  cylinder.lua
hdf5/: do.py  hdf5.sublime-project
headers/: body.h  convective.h  convectivefast.h  core.h  diffmergefast.h  diffusive.h  diffusivefast.h  elementary.h  epsfast.h  fexp.h  flowmove.h  flowmove2.h  list.h  matrix.h  merge.h  shellscript.h  sorted_tree.h  space.h  stepdata.h  tree.h
libvvhd/: CMakeLists.txt  gitinfo.cpp.in
libvvhd/headers/: MConvectiveFast.hpp  MDiffusiveFast.hpp  MEpsFast.hpp  MEpsilonFast.hpp  MFlowmove.hpp  MStepdata.hpp  TBody.hpp  TEval.hpp  TMatrix.hpp  TObj.hpp  TSortedTree.hpp  TSpace.hpp  TTime.hpp  TVec.hpp  TVec3D.hpp  XField.hpp  XIsoline.hpp  XMapStreamline.hpp  XMapVorticity.hpp  XPressure.hpp  XStreamfunction.hpp  XStreamline.hpp  XVelocity.hpp  XVorticity.hpp  body.h  core.h  elementary.h  epsfast.h  flowmove.h  map_vorticity.h  shellscript.h  sorted_tree.h  space.h  vvhdf.h
libvvhd/src/: MConvectiveFast.cpp  MDiffusiveFast.cpp  MEpsFast.cpp  MEpsilonFast.cpp  MFlowmove.cpp  MStepdata.cpp  TBody.cpp  TEval.cpp  TMatrix.cpp  TSortedTree.cpp  TSpace.cpp  TSpace_load_hdf.cpp  TSpace_load_v13.cpp  TSpace_save_hdf.cpp  XField.cpp  XIsoline.cpp  XMapStreamline.cpp  XMapVorticity.cpp  XPressure.cpp  XStreamfunction.cpp  XStreamline.cpp  XVelocity.cpp  XVorticity.cpp  map_vorticity.cpp  space_hdf.cpp  vvhdf.cpp  vvhdf_h5t.cpp
libvvhd/src/core/: MStepdata.cpp  TBody.cpp  TEval.cpp  TSortedTree.cpp  TSpace.cpp  body.cpp  sorted_tree.cpp  space.cpp  space_hdf.cpp  stepdata.cpp  vvhdf.cpp
libvvhd/src/modules/: MConvectiveFast.cpp  MDiffusiveFast.cpp  MEpsFast.cpp  convectivefast.cpp  epsfast.cpp  flowmove.cpp
libvvhd/test/: CMakeLists.txt  expect.hpp  main.cpp  test_TBody.hpp  test_TEval.hpp  test_TVec.hpp  test_TVec3D.hpp  test_XField.hpp
modules/: .version  makefile
modules/headers/: convective.h  convectivefast.h  diffmerge.h  diffmergefast.h  diffusive.h  diffusivefast.h  flowmove.h  flowmove_second.h  merge.h  mergefast.h  utils.h  utils_xml.h
modules/source/: convective.cpp  convectivefast.cpp  convectivefast_wo_tailor&atan.cpp  diffmerge.cpp  diffmergefast.cpp  diffusive.cpp  diffusivefast.cpp  flowmove.cpp  flowmove_second.cpp  merge.cpp  mergefast.cpp  objectinfluence.f90  utils.cpp  utils_xml.cpp
projects/vvhdcdf/: .qdevelop  mainres.qrc  vvhdcdf.pro
projects/vvhdflow/: main.cpp  makefile
pytest/: CMakeLists.txt  conftest.py  pytest.ini  requirements.txt  test_example.py  test_popen.py
pytest/refframe/: compose_ref_b.lua  compose_ref_o.lua  test_refframe.py
pytest/vvflow/: echo_args.lua  nothing.lua  test_vvflow.py
pytest/vvplot/: compose_cyl.lua  compose_plate.lua  test_basic.py
source/core/: body.cpp  elementary.cpp  fexp.c  shellscript.cpp  sorted_tree.cpp  space.cpp  space_hdf.cpp  stepdata.cpp  tree.cpp
utils/: Makefile
utils/vvcompose/: CMakeLists.txt  completion_vvcompose  gen_body.cpp  gen_body.h  gen_box.cpp  gen_cylinder.cpp  gen_ellipse.cpp  gen_gis.cpp  gen_parallelogram.cpp  gen_plate.cpp  gen_savonius.cpp  getset.cpp  getset.h  linenoise.c  lua_bodylist.cpp  lua_bodylist.h  lua_objlist.cpp  lua_objlist.h  lua_shellscript.cpp  lua_shellscript.h  lua_space.cpp  lua_space.h  lua_tbody.cpp  lua_tbody.h  lua_teval.cpp  lua_teval.h  lua_tobj.h  lua_tvec.cpp  lua_tvec.h  lua_tvec3d.cpp  lua_tvec3d.h  make.mk  makefile  test.lua  vvcompose.1.md  vvcompose.cpp  vvcompose_test.lua
utils/vvcompose2/: CMakeLists.txt  gen_cylinder.cpp  gen_plate.cpp  getset.cpp  getset.h  lua_bodylist.cpp  lua_bodylist.h  lua_objlist.cpp  lua_objlist.h  lua_shellscript.cpp  lua_shellscript.h  lua_tbody.cpp  lua_tbody.h  lua_tobj.cpp  lua_tvec.cpp  lua_tvec.h  lua_tvec3d.cpp  lua_tvec3d.h  test.lua  tvec.cpp  vvcompose.1.md  vvcompose.md  vvcompose2.cpp
utils/vvflow/: CMakeLists.txt  calc.py  communicate.cpp  communicate.h  gen_body.h  gen_cylinder.cpp  gen_savonius.cpp  lua_bodylist.h  lua_space.h  lua_tbody.h  lua_teval.cpp  lua_tobj.cpp  lua_tobj.h  lua_tvec.cpp  lua_tvec3d.cpp  lua_tvec3d.h  make.mk  makefile  monitoring.h  optparse.cpp  optparse.hpp  sensors.cpp  test_pidfile.cpp  utils.cpp  utils.h  vvcompose.1.md  vvcompose_test.lua  vvflow.1.md  vvflow.cpp
utils/vvplot/: CMakeLists.txt  argparse_vvplot.py  completion_vvplot  gnuplotter.cpp  gnuplotter.hpp  heatplot.cpp  isoline.cpp  make.mk  makefile  optparse.cpp  optparse.hpp  presplot.cpp  pyvvplot  slowstart.cpp  streamlines.cpp  vorticity.cpp  vvcompose.cpp  vvdistrib.cpp  vvjoin  vvmap.cpp  vvparse  vvplot  vvplot.1.md  vvplot.cpp  vvxtract
utils/vvplot/source/: isoline.cpp  libvvplot_api.h  libvvplot_main.cpp  map_extract.cpp  map_pressure.cpp  map_streamfunction.cpp  map_velocity.cpp  map_vorticity.cpp
utils/vvplot3/: CMakeLists.txt  exear.cpp  exear.h  exear.hpp  gnuplotter.cpp  gnuplotter.hpp  optparse.cpp  optparse.h  optparse.hpp  vvplot.1.md  vvplot.cpp
utils/vvtest/: CMakeLists.txt  TEval.cpp  TEval.hpp  vvtest.cpp
utils/vvtest/test/: CMakeLists.txt  test_TEval.cpp  test_TEval.hpp
utils/vvxtract/: CMakeLists.txt  h5xtract  make.mk  makefile  optparse.cpp  optparse.hpp  vvxtract.1.md  vvxtract.cpp
(+161 files in other folders)
